--- a/Emergency.html
+++ b/Emergency.html
@@ -152,7 +152,7 @@
 
   <header>
     <div class="main">
-      <img src="images/pic5.png" alt="logo" class="logo" height="50" width="50" title="MedAnalysis">
+      <img src="pic5.png" alt="logo" class="logo" height="50" width="50" title="MedAnalysis">
       <nav>
       <ul>
         <li><a href="index.html">Home</a></li>
